--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
             - *setup
             - run:
                 name: Building/Filtering ggd-recipes
-                command: *run
+                command: bash .circleci/run-test.sh 
                 no_output_timeout: 1200
     
 #    test-macos:
