--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,14 @@ version: 2
 variables:
     setup: &setup
         run:
-        name: Setup ggd dependencies
-        command: .circleci/setup.sh
+            name: Setup ggd dependencies
+                command: sh .circleci/setup.sh
 
     run: &run
         run:
-        name: Run tests
-        command: .circleci/run-test.sh
+            name: Building/Filtering ggd-recipes
+            command: .circleci/run-test.sh 
+            no_output_timeout: 1200
 
     macos: &macos
         macos:
@@ -28,10 +29,7 @@ jobs:
         <<: *linux
         steps:
             - *setup
-            - run:
-                name: Building/Filtering ggd-recipes
-                command: bash .circleci/run-test.sh 
-                no_output_timeout: 1200
+            - *run
     
 #    test-macos:
 #        <<: *macos
