--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,21 +29,15 @@ jobs:
         <<: *linux
         steps:
             - checkout 
-            - run:
-                command: pwd
-            - run: 
-                command: ls
             - *setup
             - *run
     
-#    test-macos:
-#        <<: *macos
-#        steps:
-#            - *setup
-#            - run:
-#                name: Building/Filtering ggd-recipes
-#                command: *run
-#                no_output_timeout: 1200
+    test-macos:
+        <<: *macos
+        steps:
+            - checkout 
+            - *setup
+            - *run
 
 
 workflows:
@@ -51,7 +45,7 @@ workflows:
     build-n-filter-ggd-recipes:
         jobs:
             - test-linux
-           # - test-macos:
+            - test-macos
             
 
 
