--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,17 +8,14 @@ variables:
         run:
             name: Setup ggd dependencies
             command: .circleci/setup.sh
-
     run: &run
         run:
-            name: Building/Filtering ggd-recipes
+            name: Filtering (and building) ggd-recipes
             command: .circleci/run-test.sh 
             no_output_timeout: 1200
-
     macos: &macos
         macos:
             xcode: "9.4.1" ## Using a macOS VM image (https://circleci.com/docs/2.0/executor-types/)
-
     linux: &linux
         machine: true ## Using a dedicated Linux VM image (https://circleci.com/docs/2.0/executor-types/)
 
@@ -29,13 +26,8 @@ jobs:
         <<: *linux
         steps:
             - checkout 
-            - run:
-                command: echo $CIRCLE_PULL_REQUEST
-            - run:
-                command: echo $CIRCLE_BRANCH
             - *setup
             - *run
-    
     test-macos:
         <<: *macos
         steps:
