--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,8 +40,10 @@ workflows:
     version: 2
     build-n-filter-ggd-recipes:
         jobs:
-            - test-linux
-            - test-macos
+            - test-linux:
+                context: ggd-dev
+            - test-macos:
+                context: ggd-dev
             
 
 
