--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ workflows:
     ggd-recipes-nightly-build:
         triggers: 
             - schedule:
-                cron: "0 0 * * *"
+                cron: "0 3 * * *"    ##  ~ 9PM MST, 3AM UTC  
                 filters:
                     branches:
                         only:
@@ -55,4 +55,3 @@ workflows:
                 context: ggd-dev
             - test-macos:
                 context: ggd-dev
-    
